--- a/App Repositorio/App Repositorio.csproj
+++ b/App Repositorio/App Repositorio.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AGauge">
+      <HintPath>D:\memoria azul\memoria azul\THUNDER PAU\Debug\AGauge.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
